--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <span class="author-block">
               <a href="https://anuragxel.github.io/">Anurag Ghosh</a><sup>&starf;</sup>,</span>
             <span class="author-block">
-              <a href="https://www.cs.cmu.edu/~srinivas/">Srinivasa Narasimhan</span>
+              <a href="https://www.cs.cmu.edu/~srinivas/">Srinivasa Narasimhan</a></span>
           </div>
           <div class="is-size-5 publication-authors">
             <span class="author-block">Robotics Institute, Carnegie Mellon University</span>
