7_30_v1 update arxiv_code_authors

--- a/index.html
+++ b/index.html
@@ -48,14 +48,39 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Saliency Guided Image Warping for Unsupervised Domain Adaptation</h1>
           <div class="is-size-5 publication-authors">
-          
+            <span class="author-block">
+              <a href="https://shenzheng2000.github.io/">Shen Zheng</a>*</span>,
+            <span class="author-block">
+              <a href="https://anuragxel.github.io/">Anurag Ghosh</a>*</span>,
+            <span class="author-block">
+              <a href="https://www.cs.cmu.edu/~srinivas/">Srinivasa Narasimhan</a></span>
+          </div>
+          <div class="is-size-6 publication-authors" style="margin-top: 0.5em;">
+            <span>* indicates equal contribution</span>
+          </div>
+          <div class="publication-links" style="margin-top: 1em;">
+            <span class="link-block">
+              <a href="https://arxiv.org/abs/2403.12712" class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                    <i class="ai ai-arxiv"></i>
+                </span>
+                <span>arXiv</span>
+              </a>
+            </span>
+            <span class="link-block">
+              <a href="https://github.com/ShenZheng2000/Instance-Warp" class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                    <i class="fab fa-github"></i>
+                </span>
+                <span>Code (Coming Soon)</span>
+              </a>
+            </span>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
 <div id="video_grid">
   <div class="video_wrapper">
       <div class="video_container">
