--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description"
         content="Saliency Guided Image Warping for Unsupervised Domain Adaptation.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Saliency Guided Image Warping for Unsupervised Domain Adaptation</title>
+  <title>Instance-Warp: Saliency Guided Image Warping for Unsupervised Domain Adaptation</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -36,7 +36,36 @@
       <span aria-hidden="true"></span>
     </a>
   </div>
+  <div class="navbar-menu">
+    <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
 
+      <a class="navbar-item" href="https://imaging.cs.cmu.edu/">
+      <span class="icon">
+          <i class="fas fa-home"></i>
+      </span>
+      </a>
+
+      <span class="navbar-item" >
+        Instance-Warp
+      </span>
+
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">
+          More Research
+        </a>
+        <div class="navbar-dropdown">
+          <a class="navbar-item" href="https://geometriczoom.github.io/">
+            GeometricZoom
+          </a>
+          <a class="navbar-item" href="https://microsoft.github.io/Chanakya/">
+            Chanakya
+          </a>
+          <a class="navbar-item" href="https://www.cs.cmu.edu/~roadwork/">
+            ROADWork Dataset
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </nav>
 
@@ -46,7 +75,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Saliency Guided Image Warping for Unsupervised Domain Adaptation</h1>
+          <h1 class="title is-1 publication-title">Instance-Warp: Saliency Guided Image Warping for Unsupervised Domain Adaptation</h1>
+          <h2 class="title is-size-5">WACV 2025</h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://shenzheng2000.github.io/">Shen Zheng</a>*</span>,
@@ -72,7 +102,7 @@
                 <span class="icon">
                     <i class="fab fa-github"></i>
                 </span>
-                <span>Code (Coming Soon)</span>
+                <span>Code</span>
               </a>
             </span>
           </div>
